Fix bug: remove width from the loading cards to align with the 'create new' card

--- a/components/Card/LoadingVSMCard.module.scss
+++ b/components/Card/LoadingVSMCard.module.scss
@@ -1,5 +1,5 @@
 .card {
-  width: 332px;
+  min-width: 332px;
   height: 100px;
 
   background: #ffffff;
